ghc-4335c07/testsuite/tests/typecheck/should_fail/T5957.hs
module T5957 where

flex :: Int -> Show a => a -> String
flex i a = show a ++ show i
